# mugiwait

./: .env-template  .gitignore  .gitmodules  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tools.py
.github/workflows/: tests.yml
src/: client.py  commentfaces.py  mugiclient.py  mugiwait.py  process_reply.py  tools.py
src/resources/: commentfaces.py
test/: conftest.py  test_numbersign.py  test_reddit_syntax.py  test_reply_suppress_preview.py  test_trim_reply.py
